# AgentProbe

./: .gitignore  AGENTS.md  README.md  agentprobe-spec-v0.2.md  biome.json  docker-compose.yml  package.json  pyproject.toml  skills-lock.json  tsconfig.json
.github/: automerge-paths.json  pull_request_template.md
.github/workflows/: automerge.yml  ci.yaml  nightly-baseline.yml  pr-fast.yml  weekly-doc-gardening.yml
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  helpers.ts  main.tsx  styles.css  types.ts
data/: adversarial-scenarios.yaml  autogpt-endpoint.yaml  baseline-scenarios.yaml  fixture-manifest.json  multi-session-memory.yaml  openclaw-endpoints.yaml  opencode-endpoints.yaml  personas.yaml  rubric.yaml  scenarios.yaml
data/fixtures/: ad_spend_3mo.csv  ae_roster.json  ae_territories.json  affiliate_db.json  agenda_template.md  arxiv_links.txt  (+224 more)
docs/: ARCHITECTURE.md  DESIGN.md  HARNESS.md  INDEX.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md
scripts/: check-agents-drift.py  check-behaviour-docs.py  check-behaviour-docs.ts  check-doc-links.py  check-generated-docs.sh  check-index-docs.ts  fast-feedback.sh  generate-index-docs.ts  generate-workspace-docs.py  latency-budget.ts  refresh-quality-score.py  refresh-quality-score.ts  soak.ts  validate-repo.sh  validate-setup.sh
tests/: test_adapters.py  test_cli.py  test_db.py  test_endpoint_configuration.py  test_judge.py  test_multi_session.py  test_openclaw_runner.py  test_report.py  test_runner.py  test_simulator.py
(+133 files in other folders)
